# jsonnetify

./: .gitignore  Dockerfile  README.md  generate.sh  pyproject.toml
.github/workflows/: docker-publish.yml  python-app.yml
src/jsonnetify/: __main__.py  jsonnetify.py
tests/: test_cli.py  test_convert.py
tests/resources/: manifest.libsonnet  manifest.yaml
