[tool.poetry]
name = "jsonnetify"
version = "0.1.0"
description = ""
authors = ["Cloudflight GmbH"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.22"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jsonnetify = "jsonnetify.jsonnetify:main"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*"]

[tool.coverage.report]
fail_under = 100
